--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "gatsby-starter-bloomer-blank",
   "private": true,
   "description": "A simplified bare-bones starter for Gatsby",
+  "author": "Zaim Bakar <zaim@eml.cc>",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -14,7 +15,11 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "bloomer": "^0.6.5",
+    "bulma": "^0.8.0",
     "gatsby": "^2.19.7",
+    "gatsby-plugin-sass": "^2.1.28",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
@@ -23,9 +28,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/zzzaim/gatsby-starter-bloomer-blank"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/zzzaim/gatsby-starter-bloomer-blank/issues"
   }
 }
